[project]
name = "spl-source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.11.7",
    "bs4>=0.0.2",
    "requests>=2.32.5",
]

[dependency-groups]
dev = ["ruff>=0.12.3"]
